# SAIREDA

./: CMakeLists.txt  LICENSE  README.md  main.cpp
designs/: AesParallelOpt_16.lo.fir  AesParallelOpt_2.lo.fir  AesParallelOpt_4.lo.fir  AesParallelOpt_8.lo.fir  AesSboxCanright.lo.fir  AesSboxOpt.lo.fir  KeccakChi.lo.fir  PresentSboxAndOpt.lo.fir  PrinceSboxAndOpt.lo.fir
sort_network/: size11_opt.sn  size13_opt_depth.sn  size13_opt_size.sn  size3_opt.sn  size5_opt.sn  size7_opt.sn  size9_opt.sn
src/Conversion/: FIRRTLToSecFIR.cpp  SecFIRToFIRRTL.cpp
src/SecFIR/: LowerToNetFIR.cpp  Ops.cpp  OpsFolds.cpp  SecFIRDialect.cpp  Types.cpp  Util.cpp
src/Transforms/: IRTransformations.cpp  Optimization.cpp  XAG.cpp
src/Transforms/GadgetInsertion/: CombinedIsolatingNonInterference.cpp  MaskAndDuplicate.cpp  Pass.cpp  ProbeIsolatingNonInterference.cpp  StrongNonInterference.cpp  TightProver.cpp
src/Transforms/IRTransformation/: CombinationalLogic.cpp  Majority.cpp  MuxToDLogic.cpp  OperationModules.cpp  Pass.cpp  PipeliningPass.cpp  XAG.cpp
src/Transforms/Optimization/: Pass.cpp
src/Transforms/OptimizeLatency/: Pass.cpp
src/Transforms/OptimizeRandomness/: DistributeRandomness.cpp  GadgetDependencies.cpp  Pass.cpp
src/Util/: SortingNetwork.cpp  util.cpp
src/include/: CMakeLists.txt
src/include/Conversion/: FIRRTLToSecFIR.h  SecFIRToFIRRTL.h
src/include/Passes/: GadgetInsertion.h  IRTransformation.h  OptimizationPasses.h  OptimizeLatency.h  OptimizeRandomness.h  Passes.h  TransformationPasses.h
src/include/SecFIR/: Attributes.h  OpDeclarations.td  OpExpressions.td  OpSecFIR.td  OpSideChannel.td  OpStatements.td  OpStructure.td  Ops.h  SecFIR.td  SecFIRDialect.h  Traits.h  Types.h  Types.td
src/include/Util/: BooleanChain.h  SortingNetwork.h  util.h
